<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_add_location_by_touch">Add By Touch</string>
    <string name="action_remove_marker">Remove Marker</string>
    <string name="action_location_manager">Manage My Locations</string>
    <string name="app_name">MyMap</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="map_save_button_text">Save</string>
    <string name="map_direction_button_text">Directions</string>
    <string name="map_track_me_button_text">Track Me</string>
    <string name="map_open_button_text">Open</string>
    <string name="pref_has_saved_location">loc_saved</string>
    <string name="pref_saved_latitude">latitude</string>
    <string name="pref_saved_longitude">longitude</string>
    <string name="pref_saved_title">title</string>
    <string name="map_goto_button_text">Goto</string>
    <string name="new_location_title_hint">LOCATION NAME</string>
    <string name="new_location_cancel_button_text">Cancel</string>
    <string name="new_location_confirm_button_text">Save</string>
    <string name="new_location_title_text">New Location</string>
    <string name="new_location_icon_label_text">Icon:</string>
    <string name="new_location_lat_id">lat</string>
    <string name="new_location_long_id">long</string>
    <string name="open_location_delete_button_label">Delete</string>
    <string name="open_location_goto_button_label">Goto</string>
    <string name="open_location_mark_button_label">Mark</string>
    <string name="open_location_done_button_label">Done</string>
    <string name="open_location_dialog_title">Open Location</string>


    <dimen name="standard_text_size">20dp</dimen>
    <dimen name="standard_marker_size">40dp</dimen>

</resources>
