<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/new_location_fragment_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/new_location_lat_label"
        android:textSize="@dimen/standard_text_size"
        android:layout_margin="5dp"
        android:text="LAT LABEL"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textSize="@dimen/standard_text_size"
        android:id="@+id/new_location_long_label"
        android:text="LONG LABEL"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/new_location_title_entry"
        android:layout_margin="5dp"
        android:textSize="@dimen/standard_text_size"
        android:hint="@string/new_location_title_hint"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/standard_text_size"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:id="@+id/new_location_icon_label"
            android:text="@string/new_location_icon_label_text"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/new_location_icon_selection_spinner"
            android:layout_toRightOf="@id/new_location_icon_label"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_centerVertical="true"
            />


        </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:id="@+id/new_layout_cancel_button"
            android:text="@string/new_location_cancel_button_text"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:id="@+id/new_layout_confirm_button"
            android:text="@string/new_location_confirm_button_text"/>
        </LinearLayout>



</LinearLayout>
