<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/open_location_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ListView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/open_location_listview"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gen_border9"
        android:layout_marginTop="5dp">

        <ImageView
            android:layout_width="@dimen/standard_marker_size"
            android:layout_height="@dimen/standard_marker_size"
            android:id="@+id/open_location_icon_preview"
            android:layout_centerVertical="true"
            android:layout_margin="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_toRightOf="@id/open_location_icon_preview"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/open_location_title_label"
                android:textSize="@dimen/standard_text_size"
                android:text="TITLE"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/open_location_lat_label"
                android:textSize="@dimen/standard_text_size"
                android:text="LATITUDE"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/open_location_long_label"
                android:textSize="@dimen/standard_text_size"
                android:text="LONGITUDE"/>
            </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:id="@+id/open_location_delete_button"
            android:text="@string/open_location_delete_button_label"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:id="@+id/open_location_mark_button"
            android:text="@string/open_location_mark_button_label"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:id="@+id/open_location_goto_button"
            android:text="@string/open_location_goto_button_label"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:id="@+id/open_location_done_button"
            android:text="@string/open_location_done_button_label"/>
        </LinearLayout>


</LinearLayout>
